# FATE-O-SISTERS

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: data_sifter.rs  engine.rs  main.rs  memory.rs
